--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu content-id="main-content" type="overlay">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menú</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item routerLink="/home" routerDirection="root">
+          <ion-icon name="home" slot="start"></ion-icon>
+          <ion-label>Inicio</ion-label>
+        </ion-item>
+        <ion-item routerLink="/products" routerDirection="root">
+          <ion-icon name="cart" slot="start"></ion-icon>
+          <ion-label>Gestión de Productos</ion-label>
+        </ion-item>
+        <ion-item routerLink="/clients" routerDirection="root">
+          <ion-icon name="people" slot="start"></ion-icon>
+          <ion-label>Gestión de Clientes</ion-label>
+        </ion-item>
+        <ion-item routerLink="/reports" routerDirection="root">
+          <ion-icon name="bar-chart" slot="start"></ion-icon>
+          <ion-label>Reportes</ion-label>
+        </ion-item>
+        <!-- Agregar más enlaces según las páginas creadas -->
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
