--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,42 @@
 #container a {
   text-decoration: none;
 }
+// Btn de Ventas
+.sales-card {
+  --ion-card-background: #d4edda; // Un verde claro (puedes ajustar el tono según prefieras).
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+  ion-card-header {
+    padding: 16px;
+  }
+
+  .icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .icon-large {
+    font-size: 4rem; // Tamaño del ícono.
+    color: var(--ion-color-primary);
+  }
+
+  .text-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .sales-title {
+    font-size: 1.5rem; // Tamaño del texto.
+    font-weight: bold;
+    color: var(--ion-color-success); // Texto en color verde más intenso.
+  }
+
+  &:hover {
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
+  }
+}
+
