--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>¡Bienvenido a tu Punto de Ventas!</ion-card-title>
+      <ion-card-title>¡Bienvenido, Apolo!</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       Selecciona una opción del menú para empezar.
