--- a/src/app/pages/maintenance/clients/clients.page.html
+++ b/src/app/pages/maintenance/clients/clients.page.html
@@ -12,73 +12,55 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item *ngFor="let client of clients">
-      <ion-row>
-        <ion-col size="12">
-          <ion-row>
-            <ion-col size="6">
-              <ion-label>
-                <h2>{{ client.name }}</h2>
-                <p>Email: {{ client.email }}</p>
-                <p>Teléfono: {{ client.phone }}</p>
-                <!-- Mostrar monto de crédito si existe -->
-                <ion-chip color="success" *ngIf="client.creditAmount">
-                  <ion-label>Crédito: S/{{ client.creditAmount }}</ion-label>
-                </ion-chip>
-              </ion-label>
-            </ion-col>
-            <ion-col size="6" class="button-container">
-              <div class="buttons">
-                <ion-button (click)="toggleCreditModal(client)">
-                  <ion-icon slot="icon-only" name="wallet-outline"></ion-icon>
-                </ion-button>
-                <ion-button (click)="editClient(client)">
-                  <ion-icon slot="icon-only" name="create-outline"></ion-icon>
-                </ion-button>
-                <ion-button color="danger" (click)="deleteClient(client)">
-                  <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                </ion-button>
-              </div>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-        <ion-col size="12" *ngIf="client.showCreditModal">
-          <ion-card class="credit-modal">
-            <ion-card-header>
-              <ion-card-title>Configurar Crédito</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-item>
-                <ion-label position="stacked">Monto Máximo</ion-label>
-                <ion-input
-                  type="number"
-                  [(ngModel)]="client.creditAmount"
-                  placeholder="Ingrese el monto"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">Contacto de Referencia</ion-label>
-                <ion-input
-                  type="text"
-                  [(ngModel)]="client.referenceContact"
-                  placeholder="Nombre o teléfono"></ion-input>
-              </ion-item>
-            </ion-card-content>
-            <ion-footer class="modal-actions">
-              <ion-button expand="full" color="primary" (click)="saveCreditDetails(client)">
-                Guardar
-              </ion-button>
-              <ion-button expand="full" color="medium" (click)="toggleCreditModal(client)">
-                Cancelar
-              </ion-button>
-            </ion-footer>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-  </ion-list>
+<ion-content>
+  <ion-accordion-group *ngFor="let client of clients; let i = index" expand="inset">
+    <ion-accordion>
+      <ion-item slot="header" color="light" lines="none" class="ion-align-items-center compact-item">
+        <ion-label><strong>{{ i + 1}}</strong>. {{client.fullName }}</ion-label>
+        <ion-chip color="success" *ngIf="client.creditAmount">
+          <ion-label>Crédito: S/{{ client.creditAmount }}</ion-label>
+        </ion-chip>
+        <ion-button (click)="editClient(client)">
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-button>
+      </ion-item>
+      <ion-card color="light" slot="content">
+        <ion-button color="danger" (click)="deleteClient(client)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+          Eliminar Cliente
+        </ion-button>
+        <ion-card-header>
+          <ion-card-title>Configurar Crédito</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-item>
+            <ion-label position="stacked">Monto Máximo</ion-label>
+            <ion-input
+              type="number"
+              [(ngModel)]="client.creditAmount"
+              placeholder="Ingrese el monto"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="stacked">Contacto de Referencia</ion-label>
+            <ion-input
+              type="text"
+              [(ngModel)]="client.referenceContact"
+              placeholder="Nombre o teléfono"></ion-input>
+          </ion-item>
+        </ion-card-content>
+        <ion-footer class="modal-actions">
+          <ion-button expand="full" color="primary" (click)="saveCreditDetails(client)">
+            Guardar
+          </ion-button>
+          <ion-button expand="full" color="medium" (click)="toggleCreditModal(client)">
+            Cancelar
+          </ion-button>
+        </ion-footer>
+      </ion-card>
+    </ion-accordion>
+  </ion-accordion-group>
 </ion-content>
+
 <ion-footer>
   <ion-toolbar>
     <ion-title>Tienda Apolo- 2024</ion-title>
