--- a/src/app/pages/sales/sales.page.html
+++ b/src/app/pages/sales/sales.page.html
@@ -8,6 +8,17 @@
 </ion-header>
 
 <ion-content>
+  <ion-row>
+    <ion-col size="12">
+      <ion-chip color="success">
+        <ion-icon name="add"></ion-icon>
+        <ion-label>Producto</ion-label>
+      </ion-chip>
+      <ion-chip *ngFor="let category of categorys" color="primary" mode="ios" outline="true">
+        <ion-label>{{ category.name }}</ion-label>
+      </ion-chip>
+    </ion-col>
+  </ion-row>
   <ion-row class="ion-no-margin">
     <ion-col size="4" *ngFor="let product of products" class="ion-no-padding ion-no-margin">
       <ion-card button (click)="addToCart(product)" class="product-card ion-no-padding">
@@ -34,6 +45,38 @@
     </ion-col>
   </ion-row>
 </ion-content>
-
+<ion-footer>
+  <ion-toolbar>
+    <ion-row class="ion-justify-content-center">
+      <!-- Botón de Caja -->
+      <ion-col size="auto" class="ion-text-center">
+        <div>
+          <ion-button fill="clear" shape="round" size="large">
+            <ion-icon slot="icon-only" name="cash"></ion-icon>
+          </ion-button><br>
+          <span class="footer-icons">Caja</span>
+        </div>
+      </ion-col>
+      <ion-col size="auto" class="ion-text-center">
+        <div>
+          <div *ngIf="cartCount > 0" class="badge-cart">
+            <span> {{ cartCount }} </span>
+          </div>
+          <ion-button color="success" shape="round" size="large">
+            <ion-icon slot="icon-only" name="cart"></ion-icon>
+          </ion-button>
+        </div>
+      </ion-col>
+      <ion-col size="auto" class="ion-text-center">
+        <div>
+          <ion-button fill="clear" shape="round" size="large">
+            <ion-icon slot="icon-only" name="settings"></ion-icon>
+          </ion-button><br>
+          <span class="footer-icons">Opciones</span>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
 
 
