--- a/src/app/pages/sales/sales.page.scss
+++ b/src/app/pages/sales/sales.page.scss
@@ -3,6 +3,23 @@
   border-radius: 10px;
   box-shadow: #28a745;
 }
+.badge-cart{
+  z-index: 2;
+  position: absolute;
+  top: 1px;
+  right: -4px;
+  background: red;
+  color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Agrega sombra para mejor visibilidad */
+}
 .product-badge {
   position: absolute;
   top: 1px;
@@ -22,4 +39,19 @@
     margin-right: 2px;
     font-size: 1rem;
   }
+}
+// footer
+ion-footer {
+  width: 100%;
+}
+
+ion-button {
+  margin-bottom: -10px;
+  font-size: 1rem;
+  // background-color: red;
+}
+.footer-icons{
+  padding: 0px;
+  margin: 0px;
+  color: rgb(112, 109, 109);
 }
