--- a/src/app/components/client-form/client-form.component.html
+++ b/src/app/components/client-form/client-form.component.html
@@ -1,3 +1,34 @@
-<p>
-  client-form works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>{{ isEditing ? 'Editar Cliente' : 'Nuevo Cliente' }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()">Cerrar</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label position="stacked">Nombre Completo</ion-label>
+      <ion-input [(ngModel)]="form.fullName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Correo Electrónico</ion-label>
+      <ion-input [(ngModel)]="form.email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Teléfono</ion-label>
+      <ion-input [(ngModel)]="form.phone" type="number"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Monto de Crédito</ion-label>
+      <ion-input [(ngModel)]="form.creditAmount" type="number"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Contacto de Referencia</ion-label>
+      <ion-input [(ngModel)]="form.referenceContact"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-button expand="block" (click)="saveClient()">Guardar Cliente</ion-button>
+</ion-content>
